# grinalda

./: .gitignore  DEVELOPMENT_SETUP_CHECKLIST.md  DOCKER_COMPOSE_GUIDE.md  GB-ARCHITECTURE-DOCUMENTATION.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS_QUICK_SETUP.md  HUB-DEVELOPMENT-GUIDE.md  MIGRATE_TO_DOCKER_COMPOSE.md  MIGRATION_COMPLETE.md  OAUTH_IMPLEMENTATION_PLAN.md  OAUTH_SECURITY_VERIFICATION_REPORT.md  OAUTH_TESTING_GUIDE.md  README-DEV.md  SCHEMA_MIGRATION_PLAN.md  SERVER_STARTUP_ANALYSIS.md  SERVER_STARTUP_ISSUES_ANALYSIS.md  SIGNUP_TEST_REPORT.md  SSO_LOGOUT_GUIDE.md  TABLE_RENAME_HISTORY.md  TABLE_RENAME_QUICK_REFERENCE.md  build-err.txt  build-log.txt  build-out.txt  check-dependencies.bat  check-dev-env.bat  deploy-ecosystem.ps1  deploy-log.txt  deploy-log2.txt  docker-clean.bat  docker-compose.dev.yml  docker-compose.yml  docker-start.bat  docker-stop.bat  firebase-deploy-log.txt  frontend-build-log.txt  git-changes.txt  git-stat.txt  ms-logs.txt  ms-logs2.txt  prisma-error.txt  (+12 more)
JungsiPredictionModel/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  cloudbuild.yaml  deploy.ps1  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  service.yaml
JungsiPredictionModel/.github/workflows/: deploy.yml
JungsiPredictionModel/alembic/: env.py
JungsiPredictionModel/config/: __init__.py  settings.py
JungsiPredictionModel/src/: __init__.py
JungsiPredictionModel/src/api/: __init__.py  app.py  routes.py  schemas.py
JungsiPredictionModel/src/crawlers/: __init__.py  adiga_crawler.py  base_crawler.py  crawler_manager.py  jinhak_crawler.py  uway_crawler.py
JungsiPredictionModel/src/database/: __init__.py  (+3 more)
JungsiPredictionModel/tests/: __init__.py  test_api.py  test_predictor.py
(+2736 files in other folders)
